--- a/client/src/styles/Styles.css
+++ b/client/src/styles/Styles.css
@@ -42,9 +42,18 @@
     border-radius: 10px;
     height: auto;
     display: flex;
+    color: white;
     flex-wrap: wrap;
     justify-content: center;
 
+}
+.BlogPostContainer h1{
+    align-self: center;
+    font-size: 30px;
+}
+
+.BlogContainer h1{
+    align-self: center;
 }
 
 .create_blog_post_parent {
@@ -109,4 +118,73 @@
     color: white;
     margin-top: -20px;
     font-size: 15px;
+}
+
+.BlogPostContainer {
+    width: 900px;
+    background-color: rgb(27, 31, 40);
+    margin-top: 20px;
+    border-radius: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 40px;
+    color: white;
+}
+
+.BlogPostContainer img {
+    margin-top: 25px;
+    width: 95%;
+    height: 500px;
+}
+
+.BlogPostContainer h1 {
+    font-size: 50px;
+    margin-bottom: 5px;
+    color: white;
+    align-self: center;
+}
+
+.BlogPostContainer h3 {
+    align-self: center;
+    margin-left: 20px;
+    line-height: 40px;
+    font-size: 20px;
+}
+
+.new_comment_container {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(38, 37, 37);
+    padding: 40px;
+    width: 500px;
+    height: auto;
+    gap: 10px;
+}
+
+.comment_form_container {
+    height: 100px;
+}
+
+.comment_container {
+    background-color: rgb(38, 37, 37);
+    width: 80%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+.comment_container h1{
+    font-size: 35px;
+}
+
+.comment_container h2{
+    font-size: 17px;
 }
